--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-learning-platform-be",
+  "name": "spotify-authentication-be",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,26 +7,32 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -r dotenv/config ./src/server.js"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/elinoza/spotify-authentication-be.git"
+  },
+  "author": "Alaa Eddine",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/elinoza/spotify-authentication-be/issues"
+  },
+  "homepage": "https://github.com/elinoza/spotify-authentication-be#readme",
   "dependencies": {
-    "atob": "^2.1.2",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.25.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.1",
-    "mongoose-paginate-v2": "^1.3.16",
-    "multer": "^1.4.2",
-    "multer-storage-cloudinary": "^4.0.0",
-    "nodemon": "^2.0.7",
+    "mongoose": "^5.11.17",
+    "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "query-to-mongo": "^0.10.1"
+    "passport-spotify": "^2.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
