going pretty well

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "passport-spotify": "^2.0.0"
+    "passport-spotify": "^2.0.0",
+    "query-to-mongo": "^0.10.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
