--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spotify-authentication-be",
+  "name": "e-learning-platform",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
