--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-learning-platform",
+  "name": "e-learning-platform-be",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
